src/app/globals.css
/* ... */
.work-image a:hover {
  color: inherit;
}
.work-image a:hover .work-link {
  opacity: 1;
}
.work-image video {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: #000;
  object-fit: cover;
}
.work-image img {
  max-width: 100%;
  max-height: 350px;
}
@media only screen and (max-height: 900px) {
  .work-image img {
    max-height: 250px;
  }
  .work-box {
    padding-top: 40px;
    padding-bottom: 40px;
  }
  .work-section h2 {
    font-size: 60px;
    margin-bottom: 30px;
    margin-top: 70px;
  }
}
@media only screen and (max-width: 1400px) {
  .work-title h3 {
    font-size: 35px;
  }
  .work-info p {
    font-size: 13px;
  }
  .work-info h4 {
    font-size: 15px;
  }
  .work-box {
    width: 450px;
    padding: 50px;
  }
  .work-flex {
    margin-left: -50px;
    padding-right: 75px;
  }
  .work-section h2 {
    font-size: 50px;
  }
}
@media only screen and (max-width: 1024px) {
  .work-box {
    width: 350px;
    padding: 30px;
  }
  .work-flex {
    margin-left: -30px;
    padding-right: 45px;
  }
}

@media only screen and (max-height: 650px) {
  .work-image img {
    max-height: 200px;
  }
  .work-section h2 {
    font-size: 40px;
    margin-bottom: 20px;
  }
  .work-box {
    gap: 20px;
  }
}
@media only screen and (max-width: 1025px) {
  .work-container {
    align-content: normal;
  }
  .work-flex {
    height: auto;
  }
}

/* =========================================================
   INTRO LOADER & LANDING SYSTEM (CUSTOM)
========================================================= */

:root {
  --vh: 100dvh;
  --cWidth: 90%;
  --cMaxWidth: 1440px;
}

.landing-section {
  width: 100%;
  max-width: var(--cMaxWidth);
  margin: auto;
  position: relative;
  height: var(--vh);
}
.landing-container {
  width: var(--cWidth);
  margin: auto;
  height: 100%;
  position: relative;
  max-width: var(--cMaxWidth);
}
.landing-circle1 {
  top: 0%;
  left: 0%;
  z-index: 15;
  position: fixed;
  width: 300px;
  height: 300px;
  background-color: #fb8dff;
  box-shadow: inset -50px 40px 50px rgba(84, 0, 255, 0.6);
  filter: blur(60px);
  border-radius: 50%;
  animation: loadingCircle 5s linear infinite;
}
.nav-fade {
  position: fixed;
  top: 0;
  width: 100%;
  height: 130px;
  background-image: linear-gradient(
    0deg,
    transparent,
    var(--background) 70%
  );
  pointer-events: none;
  z-index: 12;
  opacity: 0;
  left: 0;
}
@keyframes loadingCircle {
  0% {
    transform: translate(-95%, -75%) rotateZ(0deg);
  }
  100% {
    transform: translate(-95%, -75%) rotateZ(360deg);
  }
}

.landing-circle2 {
  top: 50%;
  right: 0%;
  transform: translate(calc(100% - 2px), -50%);
  z-index: 9;
  position: fixed;
  display: none;
  width: 300px;
  height: 300px;
  background-color: #fb8dff;
  box-shadow: inset -50px 40px 50px rgba(84, 0, 255, 0.6);
  filter: blur(50px);
  border-radius: 50%;
  animation: loadingCircle2 5s linear infinite;
}
@keyframes loadingCircle2 {
  100% {
    transform: translate(calc(100% - 2px), -50%) rotate(360deg);
  }
}
.landing-video,
.landing-image {
  position: absolute;
  bottom: 0;
  height: 95%;
  left: 50%;
  transform: translateX(-50%);
}
.landing-image img {
  height: 100%;
  z-index: 2;
  position: relative;
}
.character-rim {
  position: absolute;
  width: 400px;
  height: 400px;
  z-index: 1;
  background-color: #f59bf8;
  transform: translate(-50%, 36%) scaleX(1.4);
  box-shadow: inset 66px 35px 85px 0px rgba(85, 0, 255, 0.65);
  filter: blur(50px);
  border-radius: 50%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, 100%) scale(1.4);
  opacity: 0;
}
.character-model {
  height: 80%;
  height: 80vh;
  position: absolute;
  max-width: 1920px;
  max-height: 1080px;
  transform: translateX(-50%);
  width: 100%;
  left: 50%;
  z-index: 0;
  bottom: 50px;
  pointer-events: inherit;
}
.character-model::after {
  content: "";
  width: 100vw;
  height: 250px;
  background-image: linear-gradient(
    to bottom,
    transparent,
    var(--background) 70%
  );
  bottom: -50px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 9;
  position: absolute;
}
.character-model::before {
  content: "";
  width: 100vw;
  height: 700px;
  background-color: var(--background);
  top: 100%;
  left: 50%;
  transform: translateX(-50%);
  z-index: 9;
  position: absolute;
}
.character-loaded .character-rim {
  animation: backlight 3s forwards;
  animation-delay: 0.3s;
  opacity: 0;
}
.character-model canvas {
  position: relative;
  pointer-events: none;
  z-index: 2;
}
.character-hover {
  position: absolute;
  width: 280px;
  height: 280px;
  top: 50%;
  left: 50%;
  z-index: 3;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.landing-intro {
  position: absolute;
  z-index: 9;
  top: 12%;
  left: 0;
}
.landing-intro h2 {
  margin: 0;
  color: var(--accent);
  font-size: 22px;
  font-weight: 300;
  letter-spacing: 2px;
}

.landing-intro h1 {
  margin: 0;
  letter-spacing: 2px;
  font-size: 38px;
  line-height: 1.1;
  font-weight: 500;
  font-family: "Geist", sans-serif;
}

.landing-info {
  position: absolute;
  right: 50%;
  transform: translateX(50%);
  bottom: 40px;
  top: inherit;
  z-index: 9;
}
.landing-info h3 {
  font-size: 22px;
  letter-spacing: 2px;
  font-weight: 300;
  color: var(--accent);
  margin: 0;
}
.rotating-roles-container {
  display: flex;
  flex-direction: column;
  margin-top: 8px;
  position: relative;
  align-items: flex-start;
}
@media screen and (min-width: 768px) {
  .rotating-roles-container {
    align-items: flex-end;
  }
}

.landing-info h2 {
  margin: 0;
  margin-top: -20px;
  margin-left: 20px;
  font-family: "Geist", sans-serif;
  font-weight: 600;
  font-size: 32px;
  line-height: 40px;
  position: relative;
  display: flex;
  flex-wrap: nowrap;
  text-transform: uppercase;
  letter-spacing: 2px;
  overflow: hidden;
  height: 40px;
}

.landing-h2-info-1 {
  position: absolute;
  top: 0;
}
/* ... */

